# lang_learner

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
api/: app.py
app/: main.py
app/lang_learner/: speech_generator.py
lang_learner/: __init__.py  cli.py  context.py  pdf_generator.py  quiz.py  speech_generator.py  text_to_speech.py
lang_learner/reverso_api/: __init__.py
mock/: lang_learner.json
module/: pdf_generator.py  speech_generator.py
service_dictionary_generator/: README.md  app.py  pdf_generator.py  requirements.txt  run.py
service_dictionary_generator/app/: app.py  pdf_generator.py
service_dictionary_generator/module/: pdf_generator.py
service_quiz_test/: README.md  app.py
service_spoken_words/: README.md  app.py  requirements.txt  text_to_speech.py
services/dict_generator/: Dockerfile  requirements.txt  run.sh
services/dict_generator/app/: main.py  pdf_generator.py  schemas.py
services/voice_generator/: Dockerfile  requirements.txt  run.sh
services/voice_generator/app/: main.py  speech_generator.py
tests/: test_main.py
