[tool.poetry]
name = "lang-learner"
version = "0.1.0"
description = ""
authors = ["Arslanodev <aamanov829@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.1"
markdownmaker = "^0.4.0"
aiohttp = "^3.9.1"
lxml = "^4.9.3"
gtts = "^2.5.0"
pydub = "^0.25.1"
mdpdf = "^0.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
